syntax = "proto3";

package pb;

import "user.proto";

option go_package = "simplebank/pb";

message UpdateUserPasswordRequest {
    string username = 1;
    string password = 2;
}

message UpdateUserPasswordResponse {
    User user = 1;
}